--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: harbor-login
       containers:
         - name: sira
-          image: boo3vgog.gra7.container-registry.ovh.net/sira-dev/sira:5.1.3
+          image: boo3vgog.gra7.container-registry.ovh.net/sira-k8s/sira:6.0.1
           envFrom:
             - configMapRef:
                 name: sira-config
